--- a/404.html
+++ b/404.html
@@ -18,7 +18,7 @@
 
 <meta name="author" content="Codle" />
   <meta name="description" content="A student in UESTC, who major in deep learning with natural language process" />
-  <meta name="keywords" content="deep-learning, nlp, machine-learning" />
+  <meta name="keywords" content="Deep Learning, NLP, Machine Learning" />
 
 
 
@@ -82,7 +82,7 @@
 <body>
   <div id="mobile-navbar" class="mobile-navbar">
   <div class="mobile-header-logo">
-    <a href="/" class="logo">CODLE</a>
+    <a href="/" class="logo">Codle</a>
   </div>
   <div class="mobile-navbar-icon">
     <span></span>
@@ -106,7 +106,7 @@
   <div class="container" id="mobile-panel">
     <header id="header" class="header">
         <div class="logo-wrapper">
-  <a href="/" class="logo">CODLE</a>
+  <a href="/" class="logo">Codle</a>
 </div>
 
 <nav class="site-navbar">
@@ -150,10 +150,10 @@
 
     <footer id="footer" class="footer">
       <div class="social-links">
-      <a href="mailto:your@email.com" class="iconfont icon-email" title="email"></a>
-      <a href="http://localhost:1313" class="iconfont icon-twitter" title="twitter"></a>
-      <a href="http://localhost:1313" class="iconfont icon-github" title="github"></a>
-      <a href="http://localhost:1313" class="iconfont icon-weibo" title="weibo"></a>
+      <a href="mailto:codleyin@gmail.com" class="iconfont icon-email" title="email"></a>
+      <a href="https://twitter.com/CodleYin/" class="iconfont icon-twitter" title="twitter"></a>
+      <a href="https://github.com/codle/" class="iconfont icon-github" title="github"></a>
+      <a href="http://weibo.com/323327275" class="iconfont icon-weibo" title="weibo"></a>
   <a href="http://localhost:1313/index.xml" type="application/rss+xml" class="iconfont icon-rss" title="rss"></a>
 </div>
 
