--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
 <meta name="author" content="Codle" />
-  <meta name="description" content="A student in UESTC, who major in deep learning with natural language process" />
+  <meta name="description" content="在校大学生的博客网站，内容涉及人工智能，机器学习和编程语言等" />
   <meta name="keywords" content="Deep Learning, NLP, Machine Learning" />
 
 
@@ -46,7 +46,7 @@
 <link href="/lib/fancybox/jquery.fancybox-3.1.20.min.css" rel="stylesheet">
 
 <meta property="og:title" content="Codle - 无比冗杂的生活" />
-<meta property="og:description" content="A student in UESTC, who major in deep learning with natural language process" />
+<meta property="og:description" content="在校大学生的博客网站，内容涉及人工智能，机器学习和编程语言等" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="http://localhost:1313/" />
 
@@ -64,10 +64,10 @@
 
 
 <meta itemprop="name" content="Codle - 无比冗杂的生活">
-<meta itemprop="description" content="A student in UESTC, who major in deep learning with natural language process">
+<meta itemprop="description" content="在校大学生的博客网站，内容涉及人工智能，机器学习和编程语言等">
 
 <meta name="twitter:card" content="summary"/><meta name="twitter:title" content="Codle - 无比冗杂的生活"/>
-<meta name="twitter:description" content="A student in UESTC, who major in deep learning with natural language process"/>
+<meta name="twitter:description" content="在校大学生的博客网站，内容涉及人工智能，机器学习和编程语言等"/>
 
 <!--[if lte IE 9]>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/classlist/1.1.20170427/classList.min.js"></script>
@@ -82,7 +82,7 @@
 <body>
   <div id="mobile-navbar" class="mobile-navbar">
   <div class="mobile-header-logo">
-    <a href="/" class="logo"><img src="http://oog6lcve1.bkt.clouddn.com/imgs/blog/logo.png" alt="codle.net" width="30%" height="30%"></a>
+    <a href="/" class="logo"><img src="https://img.codle.net/imgs/blog/logo.png" alt="codle.net" width="30%" height="30%"></a>
   </div>
   <div class="mobile-navbar-icon">
     <span></span>
@@ -108,7 +108,7 @@
   <div class="container" id="mobile-panel">
     <header id="header" class="header">
         <div class="logo-wrapper">
-  <a href="/" class="logo"><img src="http://oog6lcve1.bkt.clouddn.com/imgs/blog/logo.png" alt="codle.net" width="30%" height="30%"></a>
+  <a href="/" class="logo"><img src="https://img.codle.net/imgs/blog/logo.png" alt="codle.net" width="30%" height="30%"></a>
 </div>
 
 <nav class="site-navbar">
