--- a/about/index.html
+++ b/about/index.html
@@ -92,7 +92,7 @@
 <body>
   <div id="mobile-navbar" class="mobile-navbar">
   <div class="mobile-header-logo">
-    <a href="/" class="logo"><img src="http://oog6lcve1.bkt.clouddn.com/imgs/blog/logo.png" alt="codle.net" width="30%" height="30%"></a>
+    <a href="/" class="logo"><img src="https://img.codle.net/imgs/blog/logo.png" alt="codle.net" width="30%" height="30%"></a>
   </div>
   <div class="mobile-navbar-icon">
     <span></span>
@@ -118,7 +118,7 @@
   <div class="container" id="mobile-panel">
     <header id="header" class="header">
         <div class="logo-wrapper">
-  <a href="/" class="logo"><img src="http://oog6lcve1.bkt.clouddn.com/imgs/blog/logo.png" alt="codle.net" width="30%" height="30%"></a>
+  <a href="/" class="logo"><img src="https://img.codle.net/imgs/blog/logo.png" alt="codle.net" width="30%" height="30%"></a>
 </div>
 
 <nav class="site-navbar">
