--- a/404.html
+++ b/404.html
@@ -207,6 +207,10 @@
   <h2>文章</h2>
   
   <ul>
+    <li><a href="https://codle.net/post/recommend-books/">推荐读物</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="https://codle.net/post/how-to-deal-with-variable-length-sequences-in-pytorch/">PyTorch 中可变长序列的处理</a></li>
   </ul>
   
