--- a/404.html
+++ b/404.html
@@ -207,7 +207,7 @@
   <h2>文章</h2>
   
   <ul>
-    <li><a href="https://codle.net/post/recommend-books/">推荐读物</a></li>
+    <li><a href="https://codle.net/post/recommend/">推荐读物</a></li>
   </ul>
   
   <ul>
