--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 
 <h1 id="简介">简介</h1>
 
-<p>本人是西南石油大学2014级计算机科学与技术学生，专心于机器学习、神经网络等人工智能领域。本站是个人博客站点，用于分享自己学习的一些知识。包括且不限于 Python, C/C++, Machine Learning, Deep Learning, Natural Language Processing 等相关方向的知识。希望文章内容能够对你有所帮助。</p>
+<p>西南石油大学计算机科学与技术专业学生，专心于机器学习、神经网络等人工智能领域。本站是个人博客站点，用于分享自己学习的一些知识。包括且不限于 Python, C/C++, Machine Learning, Deep Learning, Natural Language Processing 等相关方向的知识。希望文章内容能够对你有所帮助。</p>
 
 <p>本站使用 Hugo 生成（一个非常快的 Go 语言写的静态博客生成器）。本站使用了 Academic 模板，一款非常漂亮的学术型博客模板，可以通过网站下方的链接给予原作者支持。</p>
 
@@ -335,7 +335,7 @@
           <li>
             <i class="fa-li fa fa-graduation-cap"></i>
             <div class="description">
-              <p class="course">计算机科学与技术学士, 2018</p>
+              <p class="course">计算机科学与技术，学士, 2018</p>
               <p class="institution">西南石油大学, 中国</p>
             </div>
           </li>
@@ -426,7 +426,7 @@
   
   
   <span class="middot-divider"></span>
-  <a href="https://codle.net/post/recommend-books/#disqus_thread"></a>
+  <a href="https://codle.net/post/recommend/#disqus_thread"></a>
   
 
   
@@ -439,7 +439,7 @@
   
   
   <h3 class="article-title" itemprop="headline">
-    <a href="https://codle.net/post/recommend-books/" itemprop="url">推荐读物</a>
+    <a href="https://codle.net/post/recommend/" itemprop="url">推荐读物</a>
   </h3>
   <div class="article-style" itemprop="articleBody">
     
@@ -447,7 +447,7 @@
     
   </div>
   <p class="read-more" itemprop="mainEntityOfPage">
-    <a href="https://codle.net/post/recommend-books/" class="btn btn-primary btn-outline">
+    <a href="https://codle.net/post/recommend/" class="btn btn-primary btn-outline">
       继续阅读
     </a>
   </p>
