--- a/project/sentiment-ananalysis/index.html
+++ b/project/sentiment-ananalysis/index.html
@@ -83,7 +83,7 @@
   
   <meta property="og:site_name" content="Codle">
   <meta property="og:url" content="https://codle.net/project/sentiment-ananalysis/">
-  <meta property="og:title" content="情感分析 | Codle">
+  <meta property="og:title" content="面向中文文本的情感倾向分析 | Codle">
   <meta property="og:description" content="本项目使用 PyTorch 实现文本的情感分类，包括 LSTM 模型等，允许使用者自定义模型和词典。
 项目地址：6月8日后贴出。
 下载&amp;安装 暂无
@@ -99,7 +99,7 @@
 
   
 
-  <title>情感分析 | Codle</title>
+  <title>面向中文文本的情感倾向分析 | Codle</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
@@ -222,7 +222,7 @@
   <div class="article-container">
 
     <div class="pub-title">
-      <h1 itemprop="name">情感分析</h1>
+      <h1 itemprop="name">面向中文文本的情感倾向分析</h1>
       <span class="pub-authors" itemprop="author">&nbsp;</span>
       <span class="pull-right">
         
@@ -230,7 +230,7 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=%e6%83%85%e6%84%9f%e5%88%86%e6%9e%90&amp;url=https%3a%2f%2fcodle.net%2fproject%2fsentiment-ananalysis%2f"
+         href="https://twitter.com/intent/tweet?text=%e9%9d%a2%e5%90%91%e4%b8%ad%e6%96%87%e6%96%87%e6%9c%ac%e7%9a%84%e6%83%85%e6%84%9f%e5%80%be%e5%90%91%e5%88%86%e6%9e%90&amp;url=https%3a%2f%2fcodle.net%2fproject%2fsentiment-ananalysis%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
@@ -244,21 +244,21 @@
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fcodle.net%2fproject%2fsentiment-ananalysis%2f&amp;title=%e6%83%85%e6%84%9f%e5%88%86%e6%9e%90"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fcodle.net%2fproject%2fsentiment-ananalysis%2f&amp;title=%e9%9d%a2%e5%90%91%e4%b8%ad%e6%96%87%e6%96%87%e6%9c%ac%e7%9a%84%e6%83%85%e6%84%9f%e5%80%be%e5%90%91%e5%88%86%e6%9e%90"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fcodle.net%2fproject%2fsentiment-ananalysis%2f&amp;title=%e6%83%85%e6%84%9f%e5%88%86%e6%9e%90"
+         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fcodle.net%2fproject%2fsentiment-ananalysis%2f&amp;title=%e9%9d%a2%e5%90%91%e4%b8%ad%e6%96%87%e6%96%87%e6%9c%ac%e7%9a%84%e6%83%85%e6%84%9f%e5%80%be%e5%90%91%e5%88%86%e6%9e%90"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=%e6%83%85%e6%84%9f%e5%88%86%e6%9e%90&amp;body=https%3a%2f%2fcodle.net%2fproject%2fsentiment-ananalysis%2f">
+         href="mailto:?subject=%e9%9d%a2%e5%90%91%e4%b8%ad%e6%96%87%e6%96%87%e6%9c%ac%e7%9a%84%e6%83%85%e6%84%9f%e5%80%be%e5%90%91%e5%88%86%e6%9e%90&amp;body=https%3a%2f%2fcodle.net%2fproject%2fsentiment-ananalysis%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
